# hledger2psql

./: .dir-locals.el  .gitignore  MANIFEST.in  README.md  build.sh  fix.sh  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg
hledger2psql/: __main__.py  cli.py  hledger2psql.py
superset_docker/: .env  docker-compose.yml
