[metadata]
name = hledger2psql
version = 0.0.1
author = Author
author_email = author@example.com

[options]
packages = find:
python_requires =>=3.5, <4
install_requires =
    click
    pandas
    sqlalchemy
    psycopg2-binary
scripts =
include_package_data = True


[options.entry_points]
console_scripts =
    hledger2psql = hledger2psql.cli:hledger2psql